Add tasks, assignees, email attachments and placeholders, and automation
Implements the tasks/assignees/emails/automation PRD. Known defects are
listed at the end — this branch is for review, not for merging as is.

Tasks
- A task on a customer, invoice or payment: title, due date, status,
  notes and assignees, with a Tasks tab on each record and a "my tasks"
  view.

Assignees, one model everywhere
- Task, Dispute and Promise take several assignees through one child
  table and one picker — the same role-at-a-level token the email To
  field already uses.
- A role assignee stores the seat, not the people: who it reaches is
  read from the customer's POC book, or the record's own POC field,
  every time it is asked for. Somebody seated later is assigned by the
  same row; somebody who leaves stops being assigned.

Email
- Documents already on a record or its customer can be attached without
  re-uploading, and they are carried end to end: the dispatcher reads
  the bytes, the wire gains an attachments field, and the mail service
  writes a multipart/mixed message with one part per file.
- Placeholders in subject and body, offered for both levels — Customer.*
  with Invoice.* on an invoice, Customer.* with Payment.* on a payment.
  A role held by several people fills in the primary. An unknown
  placeholder is left exactly as typed.

Automation
- Rules written in the UI: when a Customer, Invoice or Payment is
  created or updated, or on a daily or weekly run; where the record
  matches filters written with the same framework the list pages use;
  then create a Task, Promise or Dispute, or send an Email.
- A rule runs through an outbox: one row written inside the user's own
  transaction, published after it commits, worked on a background
  thread and re-driven by a sweeper. A rule cannot slow down or break
  the save, and nothing is lost if the consumer is down.
- Filters and action tokens are checked when the rule is written, so a
  rule that could never act is a 4